--- a/example_http_ingestion/Vagrantfile
+++ b/example_http_ingestion/Vagrantfile
@@ -4,8 +4,9 @@
 Vagrant.configure("2") do |config|
   config.vm.box = "jwoschitz/kylo-hdp-sandbox-0.8.1"
 
+  # flexible range to be able to expose several servers, primary use case relies on 9123
   for p in 9123..9133
-    config.vm.network "forwarded_port", guest: p, host: p, id: "range for http servers"
+    config.vm.network "forwarded_port", guest: p, host: p
   end
 
   config.vm.network "forwarded_port", guest: 5000, host: 5000, id: "Flask web application"
@@ -18,17 +19,17 @@ Vagrant.configure("2") do |config|
     yum install -y python-pip
     pip install --upgrade pip
     pip install virtualenv
-    pip install Flask
 
     mkdir /opt/image_recognition_service/
+    mv ~/resources/app /opt/image_recognition_service/web
+
     chown nifi:nifi -R /opt/image_recognition_service/
 
     su nifi
 
     mkdir -p /opt/image_recognition_service/bin/
-    mkdir -p /opt/image_recognition_service/web/static/images
-    mkdir -p /opt/image_recognition_service/web/classification
     mkdir -p /opt/image_recognition_service/tensorflow/
+    mkdir /opt/image_recognition_service/web/logs
 
     git clone https://github.com/tensorflow/models.git /opt/image_recognition_service/tensorflow/models
 
@@ -42,6 +43,11 @@ Vagrant.configure("2") do |config|
     echo "#!/bin/bash" > /opt/image_recognition_service/bin/classify_image.sh
     echo "source /opt/image_recognition_service/tensorflow/models/.venv/bin/activate && python /opt/image_recognition_service/tensorflow/models/tutorials/image/imagenet/classify_image.py --image_file $1" >> /opt/image_recognition_service/bin/classify_image.sh
     chmod +x /opt/image_recognition_service/bin/classify_image.sh
+
+    virtualenv /opt/image_recognition_service/web/.venv
+    source /opt/image_recognition_service/web/.venv/bin/activate
+    pip install Flask
+    deactivate
 
     exit
 
