added binary to update time, always ensure that solr is started

--- a/example_twitter_streaming_solr/Vagrantfile
+++ b/example_twitter_streaming_solr/Vagrantfile
@@ -29,5 +29,14 @@ Vagrant.configure("2") do |config|
     yum install -y ntp
     /bin/systemctl start ntpd.service
     ntpdate -q pool.ntp.org
+
+    echo "#!/bin/bash" > ~/update_time.sh
+    echo "/bin/systemctl stop ntpd.service; ntpdate pool.ntp.org; /bin/systemctl start ntpd.service; date" >> ~/update_time.sh
+    chmod +x ~/update_time.sh
+  SHELL
+
+  config.vm.provision "shell", :run => 'always', inline: <<-SHELL
+    ~/update_time.sh
+    sudo -u solr /opt/lucidworks-hdpsearch/solr/bin/solr start -c -z localhost:2181
   SHELL
 end
